<resources>
    <string name="app_name">Shopping List App</string>
    <string name="btn_rice">Rice</string>
    <string name="btn_apple">Apple</string>
    <string name="btn_cheese">Cheese</string>
    <string name="btn_lettuce">Lettuce</string>
    <string name="btn_milk">Milk</string>
    <string name="button_Order">Make Order</string>
    <string name="button_order">Order</string>
    <string name="btn_salmon">Salmon</string>
    <string name="btn_chocolate">Chocolate</string>
    <string name="btn_chicken">Chicken</string>
    <string name="btn_greenPepper">Green Pepper</string>
    <string name="btn_popcorn">Popcorn</string>
</resources>
